# contextWayPoint

./: LICENSE  README.md  SECURITY.md  build_backend.py  contextRouterWorkflow.md  contextValidatorDraft.txt  projectRepoExplanation.txt  pyproject.toml
Database/: howToSetUpTestPostgres.md
Formats/: inventoryRules.yaml  orderFulfillmentContext.yaml  paymentRules.yaml  postgresPatterns.yaml  sampleBuildFailureContext.yaml  shipmentRules.yaml
apps/authoringApp/: README.md  main.mjs  package-lock.json  package.json  preload.cjs  preload.mjs
apps/authoringApp/renderer/: app.mjs  index.html  styles.css
demos/rag_vs_contextwaypoint/: explanation.md  problem.md  routed_context_packet.md  unordered_retrieved_context.md
docs/: layerOwnership.md  macroRuntimeModel.md  projectModel.md  sourceAnchoring.md  thesis.md
docs/examples/: authoringShellProject.example.json  orderFulfillmentMacroWorkspace.example.json  orderFulfillmentProject.example.json  orderFulfillmentSessionState.example.json
evals/: README.md
evals/tasks/: inventoryShortage.yaml  orderNotShipped.yaml  paymentFailure.yaml
src/: contextCompiler.py  contextRouter.py  contextValidator.py  queryContext.py
src/contextwaypoint/: __init__.py  __main__.py  cli.py  common.py  compiler.py  demo.py  project.py  project_export.py  router.py  runtime_execution.py  runtime_model.py  validation.py
tests/: test_contextwaypoint.py
